# term-windows

./: .gitignore  README.md  pyproject.toml
src/term_windows/: __init__.py  term_windows.py
tests/: __init__.py  test_dimensions.py  test_text_window.py  test_window.py
