[build-system]
requires = ["uv-build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "term-windows"
version = "0.1.0"
description = "A lightweight library for creating terminal-based windowed UIs using the Blessed library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["terminal", "tui", "blessed", "windows", "ui", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "blessed>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/p120ph37/term-windows"
Documentation = "https://github.com/p120ph37/term-windows#readme"
Repository = "https://github.com/p120ph37/term-windows"
Issues = "https://github.com/p120ph37/term-windows/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

